# simlog

./: .gitignore  Cargo.toml  README.md
src/: file.rs  lib.rs  operate.rs  timer.rs
tests/: color.rs  file_test.rs  log_test.rs  time_test.rs
