[package]
name = "simlog"
version = "2.0.1"
authors = ["lingtian-xue <lingtian-xue@outlook.com>"]
edition = "2021"
homepage = "https://github.com/Moon-AndBack/simlog"
description = "这是一个开箱即用的日志组件"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0"
lazy_static = "1.4"
chrono = "0.4"
rusty_pool = "0.6"